--- a/css/main.css
+++ b/css/main.css
@@ -47,6 +47,10 @@ a{
   align-items: center;
 }
 
+.icon-menu{
+  display: none;
+}
+
 /*UTILITY CLASSES*/
 .justify-between{
   justify-content: space-between;
@@ -96,6 +100,18 @@ a{
 
 .col-12 {
   flex-basis: calc((100% / 12) * 12);
+}
+
+
+/* RESPONSIVE */
+
+@media (max-width: 780px){
+  .menu{
+    display: none;
+  }
+  .icon-menu{
+    display: contents;
+  }
 }
 
 /* DEBUG */
