--- a/css/main.css
+++ b/css/main.css
@@ -110,6 +110,77 @@ main{
   color: rgb(91, 110, 127);
 }
 
+/* SECTION BG-PURPLE*/
+.bg-purple{
+  background-color: var(--purple);
+}
+
+.flex-col6-bgpurple{
+  display: flex;
+  flex-direction: column;
+}
+
+.cont-image{
+  padding: 80px 20px;
+}
+
+.cont-paragraph{
+  color: var(--light);
+}
+
+.cont-paragraph > p{
+  line-height: 1.5em;
+  padding: 30px 0;
+}
+
+.cont-paragraph > h3{
+  color: var(--light);
+  font-size: 25px;
+  line-height: 2em;
+  padding: 10px 0px;
+}
+
+.cont-second-col6{
+  padding: 50px 20px;
+}
+
+.block-div-white{
+  background-color: var(--light);
+  display: flex;
+  flex-direction: column;
+  border-radius: 20px;
+  width: 100%;
+  padding: 20px 20px;
+}
+
+.block-paragraph{
+  text-align: center;
+}
+
+.block-paragraph > h3{
+  color: black;
+  font-size: 25px;
+  line-height: 2em;
+  padding: 10px 0px;
+}
+
+.block-paragraph > p {
+  color: grey;
+  line-height: 1.5em;
+  padding-bottom: 20px;
+}
+
+.cont-icon-arrow{
+  padding: 20px 0px;
+}
+
+.cont-icon-arrow > i{
+  color: black;
+  background-color: var(--purple);
+  border-radius: 50%;
+  font-size: 20px;
+  padding: 20px;
+}
 
 /*UTILITY CLASSES*/
 .justify-between{
@@ -175,6 +246,11 @@ main{
 
 .col-12 {
   flex-basis: calc((100% / 12) * 12);
+}
+
+.col-6-section{
+  flex-basis: calc((100% / 12) * 6);
+  height: 50%;
 }
 
 
